allow-backend-coredns.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-allow-coredns
  namespace: frontend
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
         kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
         k8s-app: kube-dns

    ports:
       - protocol: TCP
         port: 53
       - protocol: UDP
         port: 53
